实现用户登录注册功能

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -5,6 +5,7 @@
     "pages/userCustom/userCustom",
     "pages/attractions/attractions",
     "pages/attractionList/attractionList",
+    "pages/login/login",
     "pages/plan/plan"
   ],
   "window": {
